syntax = "proto3";

import "common/id.proto";
import "RaycastResult.proto";
import "PointerEvents.proto";
option (ecs_component_id) = 1063;
import "common/ActionButton.proto";

// the renderer will set this component to the root entity once per frame with all the events
message PBPointerEventsResult {
  // a list of the last N pointer commands (from the engine)
  repeated PointerCommand commands = 1;

  // this message represents a pointer event, used both for UP and DOWN actions
  message PointerCommand {
    ActionButton button = 1; // identifier of the input
    RaycastHit hit = 2;
    PointerEventType state = 4;
    int32 timestamp = 5; // could be a Lamport timestamp
    optional float analog = 6; // if the input is analog then we store it here
  }
}